MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/BBCRM__BuzzBoard_Enrich_Jobs__c.object-meta.xml
<CustomObject>
    <label>BuzzBoard Enrich Jobs</label>
    <nameField>
        <displayFormat>BB-{0000}</displayFormat>
        <label>BuzzBoard Enrich Jobs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuzzBoard Enrich Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>