MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__enrich_record_type__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__enrich_record_type__c</fullName>
    <label>enrich record type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>