MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Fillrate__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Fillrate__c</fullName>
    <label>Fillrate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>