MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__is_default__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__is_default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is default</label>
    <type>Checkbox</type>
</CustomField>