MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__isCompleted__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__isCompleted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isCompleted</label>
    <type>Checkbox</type>
</CustomField>