MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Job_End_Date__c</fullName>
    <label>Job End Date</label>
    <type>DateTime</type>
</CustomField>