MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>