MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Job_Status_del__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Job_Status_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Status</label>
    <type>Checkbox</type>
</CustomField>