MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Start_Date__c</fullName>
    <label>Start Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>