MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Status__c</fullName>
    <label>Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>