MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Enrich_Jobs__c/fields/BBCRM__Total_Enriched__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Total_Enriched__c</fullName>
    <label>Total Enriched</label>
    <length>20</length>
    <type>Text</type>
</CustomField>